(library
 (name vyos1x_adapter)
 (public_name vyos1x-adapter)
 (libraries vyos1x-config vyconf.vyconf-client ctypes ctypes-foreign)
 (modules vyos1x_adapter))

(executable
 (name cli_set)
 (public_name vy_set)
 (libraries vyos1x_adapter vyconf.vyconf-client)
 (modules cli_set))

(executable
 (name vy_load_config)
 (public_name vy_load_config)
 (libraries vyos1x_adapter vyos1x-config)
 (modules vy_load_config))
